DICOM doc update (#625)
* DICOM doc update

This PR is a follow up for 624, which was merged prematurely (sorry).

This PR:
1) Popoulate the python docstring of `tfio.image.decode_dicom_image`
   and `tfio.image.decode_dicom_data` and carry the content from original
   README.md.
2) Added linking to the tutorial from the python docstring, as was suggested
   in the review.
3) The tensorflow_io/dicom had been move to tfio.image.decode_dicom_image
   and tfio.image.decode_dicom_data. As such the REAME.md in tensorflow_io/dicom
   is not visible anymore. This PR uses python docstring to provides all
   the necessarily information, including additional links and citations.

Also a couple of small typos and missing `,` have been fixed.

This PR is a following up of 624.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move %tensorflow_version, use tfio-nightly

* This avoids tfio reinstalling tf before applying tf_version.
* `tfio.image` doesn't exist in the current stable tfio.

--- a/docs/tutorials/dicom.ipynb
+++ b/docs/tutorials/dicom.ipynb
@@ -132,7 +132,7 @@
         "\n",
         "Google Cloud also provides a DICOM version of the images, available in [Cloud Storage](https://cloud.google.com/healthcare/docs/resources/public-datasets/nih-chest).\n",
         "\n",
-        "In this tutorial, we will download a sample file of the dataset from the [GitHub repo](https://github.com/yongtang/io/raw/dicom2/docs/tutorials/dicom/dicom_00000001_000.dcm)\n",
+        "In this tutorial, we will download a sample file of the dataset from the [GitHub repo](https://github.com/tensorflow/io/raw/master/docs/tutorials/dicom/dicom_00000001_000.dcm)\n",
         "\n",
         "\n",
         "Note: For more information about the dataset, please find the following reference:\n",
@@ -148,7 +148,7 @@
         "colab": {}
       },
       "source": [
-        "!curl -OL https://github.com/yongtang/io/raw/dicom2/docs/tutorials/dicom/dicom_00000001_000.dcm\n",
+        "!curl -OL https://github.com/tensorflow/io/raw/master/docs/tutorials/dicom/dicom_00000001_000.dcm\n",
         "!ls -l dicom_00000001_000.dcm"
       ],
       "execution_count": 0,
@@ -172,7 +172,7 @@
         "colab": {}
       },
       "source": [
-        "# Note: change to tensorflow-io\n",
+        "%tensorflow_version 2.x \n",
         "!pip install tensorflow-io-nightly"
       ],
       "execution_count": 0,
@@ -196,8 +196,6 @@
         "colab": {}
       },
       "source": [
-        "%tensorflow_version 2.x \n",
-        "\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
@@ -237,8 +235,8 @@
         "    contents,\n",
         "    color_dim=False,\n",
         "    on_error='skip',\n",
-        "    scale='preserve'\n",
-        "    dtype=tf.uint16\n",
+        "    scale='preserve',\n",
+        "    dtype=tf.uint16,\n",
         "    name=None\n",
         ")\n",
         "```\n",
