TensorFlow.org Docs update for v0.10 (#718)
* Created using Colaboratory

* Created using Colaboratory

* Remove local definitions filter

* set private_outputs:true

--- a/docs/tutorials/dicom.ipynb
+++ b/docs/tutorials/dicom.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "dicom.ipynb",
       "provenance": [],
+      "private_outputs": true,
       "collapsed_sections": [
         "Tce3stUlHN0L"
       ],
@@ -167,12 +168,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "NwL3fEMQuZrk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "try:\n",
+        "  # Use the Colab's preinstalled TensorFlow 2.x\n",
+        "  %tensorflow_version 2.x \n",
+        "except:\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uUDYyMZRfkX4",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "%tensorflow_version 2.x \n",
         "!pip install tensorflow-io-nightly"
       ],
       "execution_count": 0,
@@ -198,7 +215,20 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "import tensorflow as tf\n",
+        "\n",
+        "import tensorflow as tf"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zK7IEukfuUuF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "import tensorflow_io as tfio\n",
         "\n",
         "image_bytes = tf.io.read_file('dicom_00000001_000.dcm')\n",
