--- a/docs/tutorials/bigquery.ipynb
+++ b/docs/tutorials/bigquery.ipynb
@@ -167,6 +167,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "QeBQuayhuvhg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "try:\n",
+        "  # Use the Colab's preinstalled TensorFlow 2.x\n",
+        "  %tensorflow_version 2.x \n",
+        "except:\n",
+        "  pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Tu01THzWcE-J",
         "colab_type": "code",
         "colab": {}
@@ -403,11 +420,11 @@
       "metadata": {
         "id": "wFZcK03-YDm4",
         "colab_type": "code",
+        "outputId": "9a545bc5-e017-4df6-dbf9-fa46bda50bf1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 118
-        },
-        "outputId": "9a545bc5-e017-4df6-dbf9-fa46bda50bf1"
+        }
       },
       "source": [
         "load_data_into_bigquery(TRAINING_URL, TRAINING_TABLE_ID)\n",
@@ -448,11 +465,11 @@
       "metadata": {
         "id": "CVy3UkDgx2zi",
         "colab_type": "code",
+        "outputId": "67a769b2-cb12-4e26-beaa-c33ade9c5565",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 202
-        },
-        "outputId": "67a769b2-cb12-4e26-beaa-c33ade9c5565"
+        }
       },
       "source": [
         "%%bigquery --use_bqstorage_api\n",
@@ -820,16 +837,16 @@
       "metadata": {
         "id": "gPKrlFCN1y00",
         "colab_type": "code",
+        "outputId": "b2fcd6f3-3ece-46b3-916e-5e675b81c090",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 426
-        },
-        "outputId": "b2fcd6f3-3ece-46b3-916e-5e675b81c090"
+        }
       },
       "source": [
         "model.fit(training_ds, epochs=5)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,17 +915,17 @@
       "metadata": {
         "id": "8eGHVkmI5LBT",
         "colab_type": "code",
+        "outputId": "2d42c592-23d1-4f11-d1ef-7db0a0e0f256",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "2d42c592-23d1-4f11-d1ef-7db0a0e0f256"
+        }
       },
       "source": [
         "loss, accuracy = model.evaluate(eval_ds)\n",
         "print(\"Accuracy\", accuracy)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,11 +952,11 @@
       "metadata": {
         "id": "aMou1t1xngXP",
         "colab_type": "code",
+        "outputId": "f973298c-2a57-48a3-9ca9-e602a6b4b1f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "f973298c-2a57-48a3-9ca9-e602a6b4b1f9"
+        }
       },
       "source": [
         "sample_x = {\n",
@@ -959,7 +976,7 @@
         "\n",
         "model.predict(sample_x)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
