Update Dicom docs to use tensorflow-io (vs. tensorflow-io-nightly) (#686)
* Update Dicom docs to use tensorflow-io (vs. tensorflow-io-nightly)

As dicom is already part of the versioned release.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to point to https://www.tensorflow.org/io/api_docs

based on review feedback

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to use backtick for API names

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/dicom.ipynb
+++ b/docs/tutorials/dicom.ipynb
@@ -105,7 +105,7 @@
       "source": [
         "## Overview\n",
         "\n",
-        "This tutorial shows how to use [dicom](https://github.com/tensorflow/io/tree/master/tensorflow_io/dicom) in TensorFlow IO to decode DICOM files with TensorFlow."
+        "This tutorial shows how to use `tfio.image.decode_dicom_image` in TensorFlow IO to decode DICOM files with TensorFlow."
       ]
     },
     {
@@ -190,7 +190,7 @@
         "colab": {}
       },
       "source": [
-        "!pip install tensorflow-io-nightly"
+        "!pip install tensorflow-io"
       ],
       "execution_count": 0,
       "outputs": []
