Fix azure notebook (#782)
* try: %ten sorflow_version

* Update README.md

* clear outputs

* Set private outputs.

--- a/docs/tutorials/azure.ipynb
+++ b/docs/tutorials/azure.ipynb
@@ -3,11 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "azure.ipynb",
+      "name": "notebook.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Tce3stUlHN0L"
-      ],
+      "private_outputs": true,
       "toc_visible": true
     },
     "kernelspec": {
@@ -147,7 +145,11 @@
         "colab": {}
       },
       "source": [
-        "%tensorflow_version 2.x \n",
+        "try:\n",
+        "  %tensorflow_version 2.x \n",
+        "except Exception:\n",
+        "  pass\n",
+        "\n",
         "!pip install tensorflow-io"
       ],
       "execution_count": 0,
@@ -199,7 +201,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h21RdP7meGzP",
+        "id": "ZIrXoXgYlsj_",
         "colab_type": "code",
         "colab": {}
       },
@@ -217,8 +219,19 @@
         "else:\n",
         "  # Replace <key> with Azure Storage Key, and <account> with Azure Storage Account\n",
         "  os.environ['TF_AZURE_STORAGE_KEY'] = '<key>'\n",
-        "  account_name = '<account>'\n",
-        "\n",
+        "  account_name = '<account>'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h21RdP7meGzP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "pathname = 'az://{}/aztest'.format(account_name)\n",
         "tf.io.gfile.mkdir(pathname)\n",
         "\n",
