Maybe fix npm install. (#785)
* npm install azurite (no "-g")
* set private_outputs

--- a/docs/tutorials/azure.ipynb
+++ b/docs/tutorials/azure.ipynb
@@ -96,6 +96,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MsyhTesh4LSy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Caution: In addition to python packages this notebook uses `npm install --user` to install packages. Be careful when running locally. \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "xHxb-dlhMIzW"
       },
@@ -175,8 +185,21 @@
         "colab": {}
       },
       "source": [
-        "!npm install -g azurite@2.7.0\n",
-        "\n",
+        "!npm install azurite@2.7.0"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KXbiNLKY4kNM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Run `azurite-blob -s` as a background process. \n",
+        "# IPython doesn't recognize `&` in inline bash cells.\n",
         "get_ipython().system_raw('azurite-blob -s &')"
       ],
       "execution_count": 0,
