Prometheus - add sleep(10) for server startup. (#787)
* sleep(10) to let the server startup

* Move sleep line

--- a/docs/tutorials/prometheus.ipynb
+++ b/docs/tutorials/prometheus.ipynb
@@ -99,7 +99,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "9wRVaOQZWgRc"
       },
       "source": [
         "Caution: In addition to python packages this notebook uses `sudo apt-get install` to install third party packages."
@@ -162,6 +163,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "m6KXZuTBWgRm",
         "colab": {}
       },
       "source": [
@@ -216,6 +218,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "n9ujlunrWgRx",
         "colab": {}
       },
       "source": [
@@ -229,7 +232,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "5ZWe5DwcWgR1"
       },
       "source": [
         "The next step is to setup Prometheus server and use Prometheus to scrape CoreDNS metrics that are exposed on port `9153` from above. The `prometheus.yml` file for configuration is also available for [download](https://github.com/tensorflow/io/blob/master/docs/tutorials/prometheus/prometheus.yml):\n"
@@ -239,6 +243,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "2HFfTfHkWgR3",
         "colab": {}
       },
       "source": [
@@ -256,12 +261,17 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "VSJGsQtoWgR7",
         "colab": {}
       },
       "source": [
         "# Run `./prometheus` as a background process.\n",
         "# IPython doesn't recognize `&` in inline bash cells.\n",
-        "get_ipython().system_raw('./prometheus &')"
+        "get_ipython().system_raw('./prometheus &')\n",
+        "\n",
+        "# Give the server a few seconds to startup.\n",
+        "import time\n",
+        "time.sleep(10)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -269,7 +279,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "rLxPgbI1WgR_"
       },
       "source": [
         "In order to show some activity, `dig` command could be used to generate a few DNS queries against the CoreDNS server that has been setup:"
@@ -292,6 +303,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "mrYsnIrVWgSE",
         "colab": {}
       },
       "source": [
@@ -304,6 +316,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
+        "id": "5APx3wD6WgSH",
         "colab": {}
       },
       "source": [
