--- a/docs/tutorials/prometheus.ipynb
+++ b/docs/tutorials/prometheus.ipynb
@@ -154,7 +154,7 @@
         "  %tensorflow_version 2.x\n",
         "except Exception:\n",
         "  pass\n",
-        "!pip install tensorflow-io-nightly"
+        "!pip install tensorflow-io"
       ],
       "execution_count": 0,
       "outputs": []
